# translator_in_terminal

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmake_compiler.bat  cmake_compiler.sh  cmake_install.cmake  conanfile.txt  launch.vs.json  translator_for_cmd_bash.cpp  translator_for_cmd_bash.h  translator_in_terminal.cpp  translator_in_terminal.h  vcpkg.json
libs/: args.h  message.model.h  translator_in_terminal.h
src/: args.cpp  main.cpp
